[package]
name = "forge"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
repository = "https://github.com/metal-os/forge"
documentation = "https://docs.rs/forge"
description = "command-line tool for creating bare-metal projects that use metal"

readme = "README.md"
keyword = ["osdev", "metal"]

license = "Apache-2.0/MIT"


[dependencies]
toml = "0.4.5"
rustc_version = "0.2.1"
serde_derive = "1.0.23"
serde = "1.0.23"
